# Stock_Notifier

./: README.md  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  secrets.cpp
app/src/main/java/com/stockwidget/: StockWidgetApp.kt
app/src/main/java/com/stockwidget/data/api/: FinnhubApiService.kt  YahooSearchService.kt
app/src/main/java/com/stockwidget/data/manager/: FinnhubWebSocketManager.kt
app/src/main/java/com/stockwidget/data/model/: FinnhubDtos.kt  YahooSearchDtos.kt
app/src/main/java/com/stockwidget/data/repository/: StockPreferencesDataSource.kt  StockRepositoryImpl.kt
app/src/main/java/com/stockwidget/di/: DispatcherModule.kt  NetworkModule.kt  RepositoryModule.kt
app/src/main/java/com/stockwidget/domain/model/: DomainModels.kt
app/src/main/java/com/stockwidget/domain/repository/: StockRepository.kt
app/src/main/java/com/stockwidget/domain/usecase/: StockUseCases.kt
app/src/main/java/com/stockwidget/security/: Secrets.kt
app/src/main/java/com/stockwidget/ui/screens/: MainActivity.kt  StockDashboardScreen.kt
app/src/main/java/com/stockwidget/worker/: StockRefreshWorker.kt
app/src/main/res/layout/: widget_preview.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: stock_widget_info.xml
app/src/test/java/com/stockwidget/: StockDashboardViewModelTest.kt  StockRepositoryImplTest.kt  StockUseCasesTest.kt
gradle/: libs.versions.toml
(+6 files in other folders)
